--- a/bai 2/layout.css
+++ b/bai 2/layout.css
@@ -2,6 +2,10 @@
   padding: 0;
   margin: 0;
 }
+.container{
+  width: 1440px;
+  height: auto;
+}
 header{
   background-color: antiquewhite;
   width: auto;
