--- a/thuchanh/exam.css
+++ b/thuchanh/exam.css
@@ -1,56 +1,61 @@
-
-body{
-    width: 1440px;
-    height: 1050px;
-    background-color: rgb(15, 50, 50);
+*{
+    padding: 0;
+    margin: 0;
+}
+.container{
+    width: 1400px;
+    height: 1505px;
+    background-color: bisque;
 }
 header{
-    width: 1440px;
-    height: 363px;
-    text-align: center;
-    line-height: 363px;
-    
+    width: auto;
+    height: 362px;
+    background-color: black;
 }
-nav.top{
-    background-color: beige;
-    width: 100%;
+nav{
+    padding-left: 50px;
+    width: auto;
     height: 50px;
+    background-color: aqua;
 }
-.menu ul{
+ul{
     list-style-type: none;
-}
-.menu ul li{
-    float: inline-start;
-    margin-left: 30px;
-    line-height: 50px;
-}
-.search{
-    float: inline-end;
-    margin-right: 200px;
-    line-height: 50px;
-}
-.post{
-    background-color: cyan;
-    width: 850px;
-    height: 350px;
-    margin-left: 150px;
-    padding-inline: 150px;
-}
-nav.bot{
-    background-color: beige;
-    width: 100%;
-    height: 50px;
-}
-.bot ul{
-    list-style-type: none;
-}
-.bot ul li{
-    float: left;
-    margin-left: 30px;
-    line-height: 50px;
-}
-footer{
-    background-color: burlywood;
-    text-align: right;
 
+}
+ul li{
+    float: left;
+    width: 172px;
+    height: 50px;
+    line-height: 50px;
+}
+
+.search{
+    float: left;
+    line-height: 50px;
+    width: 258px;
+    height: 43px;
+    margin-left: 500px;
+}
+.content{
+    background-color: burlywood;
+    width: 800px;
+    height: 856px;
+    padding-top: 10px;
+    margin-left: 150px;
+}
+h2{
+    padding-left: 150px;
+}
+hr{
+    width: 800px;
+    height: 3px;
+}
+p{
+    padding: 150px;
+    padding-top: 10px;
+}
+
+pre{
+   text-align: right;
+   margin-right: 150px;
 }
